--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Declan Sullivan's Blog
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+
+<h1>Hello!</h1>
+<p>I'm Declan Sullivan, welcome to my website. It'll get better I promise.</p>
