--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: Declan Sullivan's Blog
 ---
-
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 <h1>Hello!</h1>
 <p>I'm Declan Sullivan, welcome to my website. It'll get better I promise.</p>
