--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@ title: Declan Sullivan
 </head>
 
 <h1>Hello!</h1>
-<p>I'm Declan Sullivan, welcome to my website. It'll get better I promise.</p>
+
+<div class="container">
+  <p>I'm Declan Sullivan, welcome to my website. It'll get better I promise.</p>
+</div>
