--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Declan Sullivan
 </head>
 
 <h1>Hello!</h1>
-
-<div class="container">
-  <p>I'm Declan Sullivan, welcome to my website. It'll get better I promise.</p>
-</div>
+<p style="font-size:125%">Welcome to my website, my name is Declan Sullivan.</p>
+<img src="https://i.imgur.com/h0Q9uWE.jpg"></img>
+<p style="font-size:115%">That's me.</p>
+<p style="font-size:115%">I'm currently an undergraduate at UCSD, studying data science.</p>
