--- a/resume/index.html
+++ b/resume/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Resume
 ---
+
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/resume.css">
+</head>
  
 <h2>{{ page.title }}</h2>
 
