--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@ title: Resume
 ---
 
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/resume.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
  
 <h2>{{ page.title }}</h2>
