--- a/resume/index.html
+++ b/resume/index.html
@@ -9,45 +9,45 @@ title: Resume
  
 <h2>{{ page.title }}</h2>
 
-<br>
-
-<h3>Skills</h3>
-<ul>
-  <li>Java, Python, HTML, CSS</li>
-  <li>Microsoft Office</li>
-  <li>Strong teamwork abilities</li>
-  <li>Punctuality</li>
-</ul>
-
-<h3>Relevant Coursework</h3>
-<ul>
-  <li>DSC 10 – Principles of Data Science</li>
-  <li>DSC 20 – Algorithms, Programming and Data Structures for Data Science (Python)</li>
-  <li>CSE 11 – Introduction to Computer Science and Object-Oriented Programming: Java</li>
-  <li>ECE 15 – Engineering Computation (C)</li>
-  <li>MATH 20C – Calculus and Analytic Geometry for Science and Engineering</li>
-  <li>MATH 18 – Linear Algebra</li>
-</ul>
-
-<h3>Education</h3>
-<ul>
-  <li>University of California, San Diego</li>
-    <ul>
-      <li>Data Science, BS, Undergraduate</li>
-      <li>Data Science Society Member</li>
-      <li>Provost Honors</li>
-      <li>Intro to Audio Engineering Internship</li>
-      <li>Associated Students Judicial Board Member</li>
-      <li>3.64 GPA</li>
-    </ul>
-  <br>
-  <li>Newport Harbor High School</li>
+<div class="resume">
+  <h3>Skills</h3>
   <ul>
-    <li>International Baccalaureate Diploma Program</li>
-    <li>Student Government</li>
-    <li>Youth and Government</li>
-    <li>AP Calculus Student of the Semester, Student of the Year Nominee for School Service,<br>
-        Sailor Pride Award, Team Player Award</li>
-    <li>4.32 GPA</li>
+    <li>Java, Python, HTML, CSS</li>
+    <li>Microsoft Office</li>
+    <li>Strong teamwork abilities</li>
+    <li>Punctuality</li>
   </ul>
-</ul>
+
+  <h3>Relevant Coursework</h3>
+  <ul>
+    <li>DSC 10 – Principles of Data Science</li>
+    <li>DSC 20 – Algorithms, Programming and Data Structures for Data Science (Python)</li>
+    <li>CSE 11 – Introduction to Computer Science and Object-Oriented Programming: Java</li>
+    <li>ECE 15 – Engineering Computation (C)</li>
+    <li>MATH 20C – Calculus and Analytic Geometry for Science and Engineering</li>
+    <li>MATH 18 – Linear Algebra</li>
+  </ul>
+
+  <h3>Education</h3>
+  <ul>
+    <li>University of California, San Diego</li>
+      <ul>
+        <li>Data Science, BS, Undergraduate</li>
+        <li>Data Science Society Member</li>
+        <li>Provost Honors</li>
+        <li>Intro to Audio Engineering Internship</li>
+        <li>Associated Students Judicial Board Member</li>
+        <li>3.64 GPA</li>
+      </ul>
+    <br>
+    <li>Newport Harbor High School</li>
+    <ul>
+      <li>International Baccalaureate Diploma Program</li>
+      <li>Student Government</li>
+      <li>Youth and Government</li>
+      <li>AP Calculus Student of the Semester, Student of the Year Nominee for School Service,<br>
+          Sailor Pride Award, Team Player Award</li>
+      <li>4.32 GPA</li>
+    </ul>
+  </ul>
+</div>
