--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Declan Sullivan
 
 <div class="main">
   <h1>Hello!</h1>
-  <p style="font-size:125%">Welcome to my website, my name is Declan Sullivan.</p>
+  <p style="font-size:125%">My name is Declan Sullivan, welcome to my website.</p>
   <img src="https://i.imgur.com/h0Q9uWE.jpg"></img>
-  <p style="font-size:115%">I'm currently an undergraduate at UCSD, studying data science.</p>
+  <p style="font-size:115%">I'm currently studying data science at UCSD.</p>
 </div>
