--- a/coursework/index.html
+++ b/coursework/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
+<body>
+  
+  <div class="coursework">
+    <h3>Coursework</h3>
+    <h1>Data Science Courses</h1>
+      <ul>
+        <li>DSC 10 - This introductory course develops computational thinking and tools necessary to answer questions that arise from large-scale datasets. This course emphasizes an end-to-end approach to data science, introducing programming techniques in Python that cover data processing, modeling, and analysis.</li>
+        <li>DSC 20 - Provides an understanding of the structures that underlie the programs, algorithms, and languages used in data science by expanding the repertoire of computational concepts introduced in DSC 10 and exposing students to techniques of abstraction. Course will be taught in Python and will cover topics including recursion, higher-order functions, function composition, object-oriented programming, interpreters, classes and simple data structures such as arrays, lists and linked lists.</li>
+      </ul>
+    <h1>Computer Science Course</h1>
+      <ul>
+        <li>CSE 11 - An accelerated introduction to computer science and programming using the Java language. Basic UNIX. Modularity and abstraction. Documentation, testing and verification techniques. Basic object-oriented programming, including inheritance and dynamic binding. Exception handling. Event-driven programming. </li>  
+      </ul>
+    <h1>Electrical and Computer Engineering Course</h1>
+      <ul>
+        <li>ECE 15 - Students learn the C programming language with an emphasis on high-performance numerical computation. The commonality across programming languages of control structures, data structures, and I/O is also covered. Techniques for using Matlab to graph the results of C computations are developed. </li>
+      </ul>
+    <h1>Math Courses</h1>
+      <ul>
+        <li>MATH 18 - Matrix algebra, Gaussian elimination, determinants. Linear and affine subspaces, bases of Euclidean spaces. Eigenvalues and eigenvectors, quadratic forms, orthogonal matrices, diagonalization of symmetric matrices. Applications. Computing symbolic and graphical solutions using Matlab.</li>
+        <li>MATH 20C - Vector geometry, vector functions and their derivatives. Partial differentiation. Maxima and minima. Double integration.</li>
+      </ul>
+  </div>
+  
+</body>
