--- a/coursework/index.html
+++ b/coursework/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: Coursework
+---
 
 <head>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -8,7 +10,7 @@
 <body>
   
   <div class="coursework">
-    <h1>Coursework</h1>
+    <h2>{{ page.title }}</h2>
     <h3>Data Science Courses</h3>
       <ul>
         <li>DSC 10 - This introductory course develops computational thinking and tools necessary to answer questions that arise from large-scale datasets. This course emphasizes an end-to-end approach to data science, introducing programming techniques in Python that cover data processing, modeling, and analysis.</li>
