--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@ title: Declan Sullivan
   <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
-<div class="main">
-  <h1>Hello!</h1>
-  <p style="font-size:125%">My name is Declan Sullivan, welcome to my website.</p>
-  <img src="https://i.imgur.com/h0Q9uWE.jpg"></img>
-  <p style="font-size:115%">I'm currently studying data science at UCSD.</p>
+<div class="card">
+    <p>This is a test</p>
 </div>
