--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 layout: default
 title: Declan Sullivan
 ---
+<!DOCTYPE html>
+<html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <title>{{ page.title }}</title>
 </head>
+  
+<header>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/resume">Resume</a></li>
+      <li><a href="/coursework">Coursework</a></li>
+      <li><a href="/github">Github</a></li>
+    </ul>
+  </nav>
+</header>
+  
+<body>
+  <div class="heading">
+    <h1>DECLAN SULLIVAN</h1>
+  </div>
+  <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+</body>
 
-<div class="card">
-    <p>This is a test</p>
-</div>
+</html>
