--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Declan Sullivan
   <div class="heading">
     <h1>DECLAN SULLIVAN</h1>
   </div>
-  <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+  <img src="/css/DSC_0451.jpg"></img>
 </body>
 
 </html>
