--- a/index.html
+++ b/index.html
@@ -4,27 +4,12 @@ title: Declan Sullivan
 ---
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>{{ page.title }}</title>
-</head>
-  
-<header>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/resume">Resume</a></li>
-      <li><a href="/coursework">Coursework</a></li>
-      <li><a href="/github">Github</a></li>
-    </ul>
-  </nav>
-</header>
   
 <body>
   <div class="heading">
     <h1>DECLAN SULLIVAN</h1>
   </div>
-  <img src="/css/DSC_0451.jpg"></img>
+  <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
 </body>
 
 </html>
