--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ title: Declan Sullivan
 <!DOCTYPE html>
 <html>
   
+<head>
+  <link rel="stylesheet" href="/css/main.css">
+</head>
+  
 <body>
   <div class="heading">
     <h1>DECLAN SULLIVAN</h1>
