--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Declan Sullivan
 <html>
   
 <head>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
   
 <body>
