--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ title: Declan Sullivan
   <div class="heading">
     <h1>DECLAN SULLIVAN</h1>
   </div>
-  <img src="/css/DSC_0451.jpg"></img>
+  <div class="imgborder">
+    <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+  </div>
 </body>
 
 </html>
