--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Declan Sullivan
     <h1>DECLAN SULLIVAN</h1>
   </div>
   <div class="imgborder">
-    <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+    <img src="/css/DSC_0451.jpg"></img>
   </div>
 </body>
 
