--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Declan Sullivan
   
 <head>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   
 <body>
