--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@ title: Declan Sullivan
 </head>
   
 <body>
-  <div class="heading">
-    <h1>DECLAN SULLIVAN</h1>
-  </div>
-  <div class="imgborder">
-    <img src="/css/DSC_0451.jpg"></img>
+  <div class="container">
+    <div class="heading">
+      <h1>DECLAN SULLIVAN</h1>
+    </div>
+    <div class="imgborder">
+      <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+    </div>
   </div>
 </body>
 
