--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Declan Sullivan
       <h1>DECLAN SULLIVAN</h1>
     </div>
     <div class="imgborder">
-      <img src="https://i.imgur.com/wt8UAiF.jpg"></img>
+      <img src="/css/home.jpg"></img>
     </div>
   </div>
 </body>
