--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Declan Sullivan
       <h1>DECLAN SULLIVAN</h1>
     </div>
     <div class="imgborder">
-      <img src="/css/home3.jpg"></img>
+      <img class="home" src="/css/home3.jpg"></img>
     </div>
   </div>
 </body>
