--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ title: Declan Sullivan
     </div>
     <div class="imgborder">
       <img class="home" src="/css/home3.jpg"></img>
+      <p class="about">Hi, I'm Declan, welcome to my website!  I am currently an undergraduate studying Data Science at the University of California, San Diego.  I'm a big fan of science fiction and LEGO, as well as programming and adventuring.
+        <br><br>
+        </p>
     </div>
   </div>
 </body>
