--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@ title: Declan Sullivan
 </head>
   
 <body>
+
   <div class="container">
+
     <div class="heading">
       <h1>DECLAN SULLIVAN</h1>
     </div>
+
     <div class="imgborder">
-      <img class="home" src="/css/home3.jpg"></img>
-      <p class="about">Hi, I'm Declan, welcome to my website!  I am currently an undergraduate studying Data Science at the University of California, San Diego.  I'm a big fan of science fiction and LEGO, as well as programming and adventuring.
-        <br><br>
+      
+        <img class="home" src="/css/home3.jpg"></img>
+
+        <p class="about">Hi, I'm Declan, welcome to my website! I am currently an undergraduate studying Data Science at 
+          the University of California, San Diego. I'm a big fan of science fiction and LEGO, as well as programming 
+          and adventuring.
+          <br><br> 
+          I'm a data science tutor at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our Data 
+          Science Student Society. I am a part of Associated Students as a Judicial Board Member and a staff writer for 
+          the <a href="https://themq.org/" target="_blank">Muir Quarterly</a>.
         </p>
     </div>
+  
   </div>
+
 </body>
 
 </html>
