--- a/me/index.html
+++ b/me/index.html
@@ -1,1 +1,13 @@
-
+---
+layout: default
+title: Me
+---
+<!DOCTYPE html>
+<html>
+  
+<head>
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+  
+</html>
