--- a/resume/index.html
+++ b/resume/index.html
@@ -8,52 +8,79 @@ title: Resume
 </head>
 
 <body>
- 
-  <div class="resume">
 
-    <h2>{{ page.title }}</h2>
-
-    <h3>Skills</h3>
+  <div class="category">
+  Work Experience
+  <hr>
+  <div class="list">
     <ul>
-      <li>Java, Python, HTML, CSS</li>
+      <li>Data Science Tutor (August 2018 – Present)</li>
+      <span class="hide"><ul>
+        <li>
+          Requested by DSC 20 professor to work as a tutor for the course the following quarter.  Responsibilities include holding office hours for students to get help, grading papers, proctoring exams, updating grades, and offering group and individual tutoring
+        </li>  
+      </ul></span>
+    </ul>
+  </div>
+  <hr>
+</div>
+
+<div class="category">
+  Skills
+  <hr>
+  <div class="list">
+    <ul>
+      <li>Java, Python</li>
+      <li>AWS, Lambda</li>
+      <li>HTML, CSS</li>
       <li>Microsoft Office</li>
-      <li>Strong teamwork abilities</li>
-      <li>Punctuality</li>
     </ul>
+  </div>
+  <hr>
+</div>
 
-    <h3>Relevant Coursework</h3>
+<div class="category">
+  Coursework
+  <hr>
+  <div class="list">
     <ul>
-      <li>DSC 10 – Principles of Data Science</li>
-      <li>DSC 20 – Algorithms, Programming and Data Structures for Data Science (Python)</li>
-      <li>CSE 11 – Introduction to Computer Science and Object-Oriented Programming: Java</li>
-      <li>ECE 15 – Engineering Computation (C)</li>
-      <li>MATH 20C – Calculus and Analytic Geometry for Science and Engineering</li>
-      <li>MATH 18 – Linear Algebra</li>
+      <li>DSC 10 <span class="hide">– Principles of Data Science</span></li>
+      <li>DSC 20 <span class="hide">– Algorithms, Programming and Data Structures for Data Science (Python)</span></li>
+      <li>CSE 11 <span class="hide">– Introduction to Computer Science and Object-Oriented Programming: Java</span></li>
+      <li>ECE 15 <span class="hide">– Engineering Computation (C)</span></li>
+      <li>MATH 20C <span class="hide">– Calculus and Analytic Geometry for Science and Engineering</span></li>
+      <li>MATH 18 <span class="hide">– Linear Algebra</span></li>
     </ul>
+  </div>
+  <hr>
+</div>
 
-    <h3>Education</h3>
+<div class="category">
+  Education
+  <hr>
+  <div class="list">
     <ul>
       <li>University of California, San Diego</li>
-        <ul>
-          <li>Data Science, BS, Undergraduate</li>
-          <li>Data Science Society Member</li>
-          <li>Provost Honors</li>
-          <li>Intro to Audio Engineering Internship</li>
-          <li>Associated Students Judicial Board Member</li>
-          <li>3.64 GPA</li>
-        </ul>
-      <br>
-      <li>Newport Harbor High School</li>
-      <ul>
+      <span class="hide"><ul>
+        <li>Data Science, BS, Undergraduate</li>
+        <li>Data Science Society Member</li>
+        <li>Provost Honors</li>
+        <li>Associated Students Judicial Board Member</li>
+        <li>MQ Staff Writer</li>
+        <li>3.64 GPA</li>
+      </ul></span>
+    <li>Newport Harbor High School</li>
+      <span class="hide"><ul>
         <li>International Baccalaureate Diploma Program</li>
         <li>Student Government</li>
         <li>Youth and Government</li>
         <li>AP Calculus Student of the Semester, Student of the Year Nominee for School Service,<br>
-            Sailor Pride Award, Team Player Award</li>
+  Sailor Pride Award, Team Player Award</li>
         <li>4.32 GPA</li>
-      </ul>
+      </ul></span>
     </ul>
-
   </div>
+  <hr>
+</div>
 
 </body>
