--- a/resume/index.html
+++ b/resume/index.html
@@ -3,8 +3,12 @@ layout: default
 title: Resume
 ---
 
+<!DOCTYPE html>
+<html>
+  
 <head>
   <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
