--- a/me/index.html
+++ b/me/index.html
@@ -10,6 +10,10 @@ title: Me
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   
+<body>
+  
   <h1>Coming Soon!</h1>
+  
+</body>
   
 </html>
