--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Declan Sullivan
   
 <body>
 
-  <img class="home" src="/css/home3.jpg"></img>
+  <img class="home" onmouseenter="newImg(this)" onmouseleave="oldImg(this)" src="/css/home3.jpg"></img>
 
   <p class="about">
     Hi, I'm Declan, welcome to my website! I am currently an undergraduate studying Data Science at 
