--- a/me/index.html
+++ b/me/index.html
@@ -33,7 +33,7 @@ title: Me
     <div class="moment">
       <img src="/css/vaporator.jpg" id="sidi" onmouseenter="changeImages(this)" onmouseleave="revertImages(this)"></img>
       <div class="content">
-        <h2>Vaporator at the Hotel Sidi Driss - 6/23/18</h2>
+        <h2>Hotel Sidi Driss - 6/23/18</h2>
         <p>
           At the beginning of the summer of 2018 my father and I went on a trip to Tunisia to visit Star Wars filming 
           locations. One stop along the way was the Hotel Sidi Driss in Matmata. This was where the interior shots of the 
