--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Declan Sullivan
     and adventuring.
     <br><br> 
     I'm a data science tutor at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our Data 
-    Science Student Society. I am a part of Associated Students as a Judicial Board Member and a staff writer for 
+    Science Student Society. I am also a part of Associated Students as a Judicial Board Member and a staff writer for 
     the <a href="https://themq.org/" target="_blank">Muir Quarterly</a>.
   </p>
 
