--- a/me/index.html
+++ b/me/index.html
@@ -10,27 +10,13 @@ title: Me
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   
-<script>
-  
-  function changeImages(x) {
-    if (x.id === 'sidi') {
-       x.src = "/css/interior.jpg";
-    }
-  }
-  function revertImages(x) {
-    if (x.id === 'sidi') {
-       x.src = "/css/vaporator.jpg";
-    }
-  }
-  
-</script>
-  
 <body>
 
   <div class="me">
 
     <div class="moment">
-      <img src="/css/vaporator.jpg" id="sidi" onmouseenter="changeImages(this)" onmouseleave="revertImages(this)"></img>
+      <img src="/css/vaporator.jpg"></img>
+      <img src="/css/interior.jpg"></img>
       <div class="content">
         <h2>Hotel Sidi Driss - 6/23/18</h2>
         <p>
