--- a/me/index.html
+++ b/me/index.html
@@ -15,6 +15,23 @@ title: Me
   <div class="me">
 
     <div class="moment">
+      <img src="/css/homestead.jpg"></img>
+      <img src="/css/luke-lars-tatooine.jpg"></img>
+      <div class="content">
+        <h2>Lars Homestead - 6/23/18</h2>
+        <p>
+          The end goal of my father and my trip to Tunisia was to visit the film site for the Lars Homestead exterior 
+          shots.  We managed to make it there after driving across desert and salt flats from one side of Tunisia to 
+          the other.  When we got there we took a bunch of photos and watched the sunset just as Luke did.  It was a 
+          fantastic experience and I would encourage anyone considering to make the Star Wars pilgrimage themselves to try 
+          it out.
+        </p>
+      </div>
+    </div>
+
+    <hr>
+  
+    <div class="moment">
       <img src="/css/vaporator.jpg"></img>
       <img src="/css/interior.jpg"></img>
       <div class="content">
