--- a/me/index.html
+++ b/me/index.html
@@ -11,6 +11,16 @@ title: Me
 </head>
   
 <body>
+  
+  <div class="secondnav">
+    <nav>
+      <ul>
+        <li><a href="/me">Star Wars</a></li>
+        <li><a href="/me/personal">Personal</a></li>
+        <li><a href="/me/blog">Blog</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <div class="me">
 
