--- a/me/index.html
+++ b/me/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: me
 title: Me
 ---
 <!DOCTYPE html>
@@ -11,16 +11,6 @@ title: Me
 </head>
   
 <body>
-  
-  <div class="secondnav">
-    <nav>
-      <ul>
-        <li><a href="/me">Star Wars</a></li>
-        <li><a href="/me/personal">Personal</a></li>
-        <li><a href="/me/blog">Blog</a></li>
-      </ul>
-    </nav>
-  </div>
 
   <div class="me">
 
