--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ title: About
   
 <body>
 
-  <div class="about">
+  <div class="aboutpage">
 
     <div class="moment">
       <img src="/css/homestead.jpg"></img>
