--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: DECLAN SULLIVAN
   }
 
   function oldImg(x) {
-    x.src = "/css/home3.jpg";
+    x.src = "/css/home.jpg";
   }
 </script>
   
@@ -24,7 +24,7 @@ title: DECLAN SULLIVAN
   
   <div class="subimgborder">
     
-    <img class="home" onmouseenter="newImg(this)" onmouseleave="oldImg(this)" src="/css/home3.jpg"></img>
+    <img class="home" onmouseenter="newImg(this)" onmouseleave="oldImg(this)" src="/css/home.jpg"></img>
 
     <p class="about">
       Hi, I'm Declan, welcome to my website! I am currently an undergraduate studying Data Science at 
