--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@ tab_title: Resume
   <hr>
   <div class="list">
     <ul>
-      <li>Data Science Tutor (August 2018 – Present)</li>
+      <li>Data Science Instructional Assistant (August 2018 – Present)</li>
       <span class="hide"><ul>
         <li>
           Requested by DSC 20 professor to work as a tutor for the course the following quarter.  Responsibilities include holding office hours for students to get help, grading papers, proctoring exams, updating grades, and offering group and individual tutoring
@@ -36,7 +36,7 @@ tab_title: Resume
   <div class="list">
     <ul>
       <li>Java, Python</li>
-      <li>AWS, Lambda</li>
+      <li>AWS, Lambda, DynamoDB</li>
       <li>HTML, CSS</li>
       <li>Microsoft Office</li>
     </ul>
@@ -71,7 +71,6 @@ tab_title: Resume
         <li>Data Science Society Member</li>
         <li>Provost Honors</li>
         <li>Associated Students Judicial Board Member</li>
-        <li>MQ Staff Writer</li>
         <li>3.64 GPA</li>
       </ul></span>
     <li>Newport Harbor High School</li>
