Updated About page

--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,9 @@
 ---
 layout: about
-title: STAR WARS
-tab_title: Star Wars
+title: ABOUT
+tab_title: About
 ---
+
 <!DOCTYPE html>
 <html>
   
@@ -12,44 +13,9 @@ tab_title: Star Wars
 </head>
   
 <body>
-
-  <div class="aboutpage">
-
-    <div class="moment">
-      <img src="/css/homestead.jpg"></img>
-      <img src="/css/luke-lars-tatooine.jpg"></img>
-      <div class="content">
-        <h2>Lars Homestead - 6/23/18</h2>
-        <p>
-          The end goal of my father and my trip to Tunisia was to visit the film site for the Lars Homestead exterior 
-          shots.  We managed to make it there after driving across desert and salt flats from one side of Tunisia to 
-          the other.  When we got there we took a bunch of photos and watched the sunset just as Luke did.  It was a 
-          fantastic experience and I would encourage anyone considering to make the Star Wars pilgrimage themselves to try 
-          it out.
-        </p>
-      </div>
-    </div>
-
-    <hr>
   
-    <div class="moment">
-      <img src="/css/vaporator.jpg"></img>
-      <img src="/css/interior.jpg"></img>
-      <div class="content">
-        <h2>Hotel Sidi Driss - 6/23/18</h2>
-        <p>
-          At the beginning of the summer of 2018 my father and I went on a trip to Tunisia to visit Star Wars filming 
-          locations. One stop along the way was the Hotel Sidi Driss in Matmata. This was where the interior shots of the 
-          Lars Homestead were filmed. It was great to see a little mock vaporator there, as well as hang out where Luke, 
-          Uncle Owen, and Aunt Beru all ate together when Luke complains about having to stay on for another season.
-        </p>
-      </div>
-    </div>
-
-    <hr>
-
-  </div>
   
+
 </body>
   
 </html>
