--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ tab_title: Declan Sullivan
       the University of California, San Diego. I'm a big fan of science fiction and LEGO, as well as programming 
       and adventuring.
       <br><br> 
-      I'm a data science tutor at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our Data 
+      I'm a data science Instructional Assistant at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our Data 
       Science Student Society. I am also a part of Associated Students as a Judicial Board Member and a staff writer for 
       the <a href="https://themq.org/" target="_blank">Muir Quarterly</a>.
     </p>
