--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ tab_title: Declan Sullivan
     <p class="about">
       Hi, I'm Declan, welcome to my website! I am currently an undergraduate studying Data Science at 
       the University of California, San Diego. I'm a big fan of science fiction and LEGO, as well as programming 
-      and adventuring.
+      and cooking.
       <br><br> 
-      I'm a data science Instructional Assistant at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our Data 
-      Science Student Society. I am also a part of Associated Students as a Judicial Board Member and a staff writer for 
-      the <a href="https://themq.org/" target="_blank">Muir Quarterly</a>.
+      I'm a data science Instructional Assistant at UCSD and a member of <a href="http://ds3.io/" target="_blank">DS3</a>, our 
+      Data Science Student Society. I am also a part of Associated Students as a Judicial Board Member and a member of the 
+      Computer Science and Engineering Society.
     </p>
   
   </div>
