--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,36 @@ tab_title: Resume
       <li>Data Science Instructional Assistant (September 2018 – Present)</li>
       <span class="hide"><ul>
         <li>
-          Requested by DSC 20 professor to work as a tutor for the course the following quarter.  Responsibilities include holding office hours for students to get help, grading papers, proctoring exams, updating grades, and offering group and individual tutoring
+          Requested by DSC 20 professor to work as a tutor for the course the following quarter.  Responsibilities 
+          include holding office hours for students to get help, grading papers, proctoring exams, updating grades, 
+          and offering group and individual tutoring
+        </li>  
+      </ul></span>
+    </ul>
+  </div>
+  <hr>
+</div>
+
+<div class="category">
+  Experiences
+  <hr>
+  <div class="list">
+    <ul>
+      <li>Alexa Skills Challenge: Tech for Good Hackathon Participant</li>
+      <span class="hide"><ul>
+        <li>
+          <a href="https://devpost.com/software/alexa-skills-challenge-tech-for-good" target="_blank">Hackathon hosted through Devpost by 
+          Amazon.</a>  Built a skill for Amazon Alexa called <a href ="https://www.amazon.com/Declan-Sullivan-Distance-Diary/dp/B07H99634Z/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1538809597&sr=1-1&keywords=distance+diary" target="_blank">
+          Distance Diary</a>.  It convinces users to ride their bike instead of driving their car places.  It features
+          Amazon's Lambda and DynamoDB and can store information that users provide to the skill.
+        </li>  
+      </ul></span>
+      <li>Battlehack West 2018 Participant</li>
+      <span class="hide"><ul>
+        <li>
+          MIT hosted hackathon in San Jose.  This hackathon involved programming a basic AI to compete against other teams'
+          armies.  It was a great learning experience for algorithms such as bug pathfinding, A* pathfinding, and learning
+          how to have multiple objects communicate movement to one another.
         </li>  
       </ul></span>
     </ul>
@@ -51,7 +80,9 @@ tab_title: Resume
     <ul>
       <li>DSC 10 <span class="hide">– Principles of Data Science</span></li>
       <li>DSC 20 <span class="hide">– Algorithms, Programming and Data Structures for Data Science (Python)</span></li>
+      <li>DSC 30 <span class="hide">– Data Structures and Algorithms for Data Science (Java)</span></li>
       <li>CSE 11 <span class="hide">– Introduction to Computer Science and Object-Oriented Programming: Java</span></li>
+      <li>CSE 20 <span class="hide">– Discrete Mathematics</span></li>
       <li>ECE 15 <span class="hide">– Engineering Computation (C)</span></li>
       <li>MATH 20C <span class="hide">– Calculus and Analytic Geometry for Science and Engineering</span></li>
       <li>MATH 18 <span class="hide">– Linear Algebra</span></li>
