--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,21 @@ tab_title: About
   
 <body>
   
-  
+    <div class="aboutpage">
+
+        <div class="moment">
+          <img src="/css/me.jpg"></img>
+          <div class="content">
+            <h1></h1>
+            <p>
+
+            </p>
+          </div>
+        </div>
+    
+        <hr>
+    
+      </div>
 
 </body>
   
