--- a/coursework/index.html
+++ b/coursework/index.html
@@ -39,6 +39,17 @@ tab_title: Coursework
           data structures such as arrays, lists and linked lists.
         </li>
       </ul></span>
+
+      <li>DSC 30</li>
+      <span class="hide"><ul>
+        <li>
+            Builds on topics covered in DSC 20 and provides practical experience in composing larger computational systems 
+            through several significant programming projects using Java.  Students will study advanced programming 
+            techniques including encapsulation, abstract data types, interfaces, algorithms and complexity, and data 
+            structures such as stacks, queues, priority queues, heaps, linked lists, binary trees, binary search trees 
+            and hash tables.
+        </li>
+      </ul></span>
       
     </ul>
   </div>
@@ -46,7 +57,7 @@ tab_title: Coursework
 </div>
 
 <div class="category">
-  Computer Science Course
+  Computer Science Courses
   <hr>
   <div class="list">
     <ul>
@@ -57,6 +68,17 @@ tab_title: Coursework
           An accelerated introduction to computer science and programming using the Java language. Basic UNIX. 
           Modularity and abstraction. Documentation, testing and verification techniques. Basic object-oriented 
           programming, including inheritance and dynamic binding. Exception handling. Event-driven programming.
+        </li>
+      </ul></span>
+
+      <li>CSE 20</li>
+      <span class="hide"><ul>
+        <li>
+            Basic discrete mathematical structures: sets, relations, functions, sequences, equivalence relations, 
+            partial orders, and number systems. Methods of reasoning and proofs: prepositional logic, predicate logic, 
+            induction, recursion, and pigeonhole principle. Infinite sets and diagonalization. Basic counting techniques; 
+            permutation and combinations. Applications will be given to digital logic design, elementary number theory, 
+            design of programs, and proofs of program correctness.
         </li>
       </ul></span>
       
