--- a/about/index.html
+++ b/about/index.html
@@ -17,9 +17,9 @@ tab_title: About
     <div class="aboutpage">
 
         <div class="moment">
-          <img src="/css/me.jpg"></img>
+          <img src="/css/me.jpeg"></img>
           <div class="content">
-            <h1></h1>
+            <h1>Hello There!</h1>
             <p>
 
             </p>
