--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@ tab_title: About
     <div class="aboutpage">
 
         <div class="moment">
-          <img src="/css/me.jpeg"></img>
+          <img src="/css/me.jpg"></img>
           <div class="content">
             <h1>Hello There!</h1>
             <p>
