--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,8 @@ tab_title: About
           <div class="content">
             <h1>Hello There!</h1>
             <p>
-
+              Welcome to my little about section.  Here you can find pictures of me recreating Star Wars scenes, 
+              occasional blog posts on things that I enjoy, and pictures of things that I have done recently. 
             </p>
           </div>
         </div>
