--- a/resume/index.html
+++ b/resume/index.html
@@ -14,6 +14,34 @@ tab_title: Resume
 
 <body>
 
+    <div class="resumeheader">
+      <h5>Declan Sullivan</h5>
+      <h5>University of California, San Diego</h5>
+      <h5>Data Science (B.S.)</h5>
+      <br>
+      <p>Newport Beach, CA.</p>
+      <a href="mailto:declan@declansullivan.com" target="_blank">declan@declansullivan.com</p>
+    </div>
+
+    <div class="category">
+        Education
+        <hr>
+        <div class="list">
+          <ul>
+            <li>University of California, San Diego - 3.64 GPA</li>
+            <span class="hide"><ul>
+              <li>Data Science Student Society and Associated Students Judicial Board Member</li>
+              <li>Provost Honors</li>
+            </ul></span>
+          <li>Newport Harbor High School - 4.32 GPA</li>
+            <span class="hide"><ul>
+              <li>International Baccalaureate Diploma Program</li>
+            </ul></span>
+          </ul>
+        </div>
+        <hr>
+      </div>
+
   <div class="category">
   Work Experience
   <hr>
@@ -22,9 +50,9 @@ tab_title: Resume
       <li>Data Science Instructional Assistant (September 2018 – Present)</li>
       <span class="hide"><ul>
         <li>
-          Requested by DSC 20 professor to work as a tutor for the course the following quarter.  Responsibilities 
-          include holding office hours for students to get help, grading papers, proctoring exams, updating grades, 
-          and offering group and individual tutoring
+          Responsibilities include holding office hours for students to get help, 
+          grading papers, proctoring exams, and planning tests for programming
+          assignments.
         </li>  
       </ul></span>
     </ul>
@@ -33,27 +61,40 @@ tab_title: Resume
 </div>
 
 <div class="category">
-  Experiences
+  Projects
   <hr>
   <div class="list">
     <ul>
+
       <li>Alexa Skills Challenge: Tech for Good Hackathon Participant</li>
       <span class="hide"><ul>
         <li>
-          <a href="https://devpost.com/software/alexa-skills-challenge-tech-for-good" target="_blank">Hackathon hosted through Devpost by 
-          Amazon.</a>  Built a skill for Amazon Alexa called <a href ="https://www.amazon.com/Declan-Sullivan-Distance-Diary/dp/B07H99634Z/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1538809597&sr=1-1&keywords=distance+diary" target="_blank">
-          Distance Diary</a>.  It convinces users to ride their bike instead of driving their car places.  It features
-          Amazon's Lambda and DynamoDB and can store information that users provide to the skill.
+          <a href="https://devpost.com/software/alexa-skills-challenge-tech-for-good" target="_blank">
+          Alexa Skills Challenge: Tech for Good Participant</a>  Developed an Alexa skill called 
+          <a href ="https://www.amazon.com/Declan-Sullivan-Distance-Diary/dp/B07H99634Z/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1538809597&sr=1-1&keywords=distance+diary" target="_blank">
+          Distance Diary</a> that communicates with DynamoDB database through the boto3 API. Controlled by 
+          AWS Lambda, written in Python.
         </li>  
       </ul></span>
-      <li>Battlehack West 2018 Participant</li>
+
+      <li>SD Hacks 2018 Participant</li>
       <span class="hide"><ul>
         <li>
-          MIT hosted hackathon in San Jose.  This hackathon involved programming a basic AI to compete against other teams'
-          armies.  It was a great learning experience for algorithms such as bug pathfinding, A* pathfinding, and learning
-          how to have multiple objects communicate movement to one another.
-        </li>  
+          Created Beacon, a web app that allows for dropping of pins for all users on the
+          service to see. Utilized Here.com API, I developed the system that allowed for
+          shared pins using JSONbin.io API. Written in JavaScript.
+        </li>
       </ul></span>
+
+      <li>Chess Tournament Tool</li>
+      <span class="hide"><ul>
+        <li>
+          Developed a <a href="https://github.com/declansullivan/Chess-Tournament-Tool" target="_blank">tool</a> 
+          in Java to keep track of chess tournament rankings and outcomes, as well as 
+          assign players to matches and create a full list of statistics.
+        </li>
+      </ul></span>
+
     </ul>
   </div>
   <hr>
@@ -64,10 +105,10 @@ tab_title: Resume
   <hr>
   <div class="list">
     <ul>
-      <li>Java, Python</li>
-      <li>AWS, Lambda, DynamoDB</li>
-      <li>HTML, CSS</li>
-      <li>Microsoft Office</li>
+      <li>Languages: Java, Python</li>
+      <li>AWS: Lambda, DynamoDB</li>
+      <li>Tools: VS Code, IntelliJ, JUnit</li>
+      <li>Other: HTML, CSS, JSON, Microsoft Office</li>
     </ul>
   </div>
   <hr>
@@ -91,31 +132,6 @@ tab_title: Resume
   <hr>
 </div>
 
-<div class="category">
-  Education
-  <hr>
-  <div class="list">
-    <ul>
-      <li>University of California, San Diego</li>
-      <span class="hide"><ul>
-        <li>Data Science, BS, Undergraduate</li>
-        <li>Data Science Society Member</li>
-        <li>Provost Honors</li>
-        <li>Associated Students Judicial Board Member</li>
-        <li>3.64 GPA</li>
-      </ul></span>
-    <li>Newport Harbor High School</li>
-      <span class="hide"><ul>
-        <li>International Baccalaureate Diploma Program</li>
-        <li>Student Government</li>
-        <li>Youth and Government</li>
-        <li>AP Calculus Student of the Semester, Student of the Year Nominee for School Service,<br>
-  Sailor Pride Award, Team Player Award</li>
-        <li>4.32 GPA</li>
-      </ul></span>
-    </ul>
-  </div>
-  <hr>
-</div>
+
 
 </body>
