--- a/resume/index.html
+++ b/resume/index.html
@@ -15,12 +15,12 @@ tab_title: Resume
 <body>
 
     <div class="resumeheader">
-      <h5>Declan Sullivan</h5>
-      <h5>University of California, San Diego</h5>
-      <h5>Data Science (B.S.)</h5>
+      <h4>Declan Sullivan</h4>
+      <h4>University of California, San Diego</h4>
+      <h4>Data Science (B.S.)</h4>
       <br>
       <p>Newport Beach, CA.</p>
-      <a href="mailto:declan@declansullivan.com" target="_blank">declan@declansullivan.com</p>
+      <a href="mailto:declan@declansullivan.com" target="_blank">declan@declansullivan.com</a>
     </div>
 
     <div class="category">
