--- a/resume/index.html
+++ b/resume/index.html
@@ -14,124 +14,127 @@ tab_title: Resume
 
 <body>
 
-    <div class="resumeheader">
-      <h4>Declan Sullivan</h4>
-      <h4>University of California, San Diego</h4>
-      <h4>Data Science (B.S.)</h4>
-      <br>
-      <p>Newport Beach, CA.</p>
-      <a href="mailto:declan@declansullivan.com" target="_blank">declan@declansullivan.com</a>
+    <div class="category">
+      Declan Sullivan
+      <hr>
+      <div class="list">
+        <ul>
+          <li>University of California, San Diego</li>
+          <li>Data Science (B.S.)</li>
+          <li>Newport Beach, CA</li>
+          <li><a href="mailto:declan@declansullivan.com" target="_blank">declan@declansullivan.com</a></li>
+        </ul>
+      </div>
+      <hr>
     </div>
 
     <div class="category">
-        Education
-        <hr>
-        <div class="list">
-          <ul>
-            <li>University of California, San Diego - 3.64 GPA</li>
-            <span class="hide"><ul>
-              <li>Data Science Student Society and Associated Students Judicial Board Member</li>
-              <li>Provost Honors</li>
-            </ul></span>
+      Education
+      <hr>
+      <div class="list">
+        <ul>
+          <li>University of California, San Diego - 3.64 GPA</li>
+          <span class="hide"><ul>
+            <li>Data Science Student Society and Associated Students Judicial Board Member</li>
+            <li>Provost Honors</li>
+          </ul></span>
           <li>Newport Harbor High School - 4.32 GPA</li>
-            <span class="hide"><ul>
-              <li>International Baccalaureate Diploma Program</li>
-            </ul></span>
-          </ul>
-        </div>
-        <hr>
+          <span class="hide"><ul>
+            <li>International Baccalaureate Diploma Program</li>
+          </ul></span>
+        </ul>
       </div>
+      <hr>
+    </div>
 
   <div class="category">
-  Work Experience
-  <hr>
-  <div class="list">
-    <ul>
-      <li>Data Science Instructional Assistant (September 2018 – Present)</li>
-      <span class="hide"><ul>
-        <li>
-          Responsibilities include holding office hours for students to get help, 
-          grading papers, proctoring exams, and planning tests for programming
-          assignments.
-        </li>  
-      </ul></span>
-    </ul>
+    Work Experience
+    <hr>
+    <div class="list">
+      <ul>
+        <li>Data Science Instructional Assistant (September 2018 – Present)</li>
+        <span class="hide"><ul>
+          <li>
+            Responsibilities include holding office hours for students to get help, 
+            grading papers, proctoring exams, and planning tests for programming
+            assignments.
+          </li>  
+        </ul></span>
+      </ul>
+    </div>
+    <hr>
   </div>
-  <hr>
-</div>
 
-<div class="category">
-  Projects
-  <hr>
-  <div class="list">
-    <ul>
+  <div class="category">
+    Projects
+    <hr>
+    <div class="list">
+      <ul>
 
-      <li>Alexa Skills Challenge: Tech for Good Hackathon Participant</li>
-      <span class="hide"><ul>
-        <li>
-          <a href="https://devpost.com/software/alexa-skills-challenge-tech-for-good" target="_blank">
-          Alexa Skills Challenge: Tech for Good Participant</a>  Developed an Alexa skill called 
-          <a href ="https://www.amazon.com/Declan-Sullivan-Distance-Diary/dp/B07H99634Z/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1538809597&sr=1-1&keywords=distance+diary" target="_blank">
-          Distance Diary</a> that communicates with DynamoDB database through the boto3 API. Controlled by 
-          AWS Lambda, written in Python.
-        </li>  
-      </ul></span>
+        <li>Alexa Skills Challenge: Tech for Good Hackathon Participant</li>
+        <span class="hide"><ul>
+          <li>
+            <a href="https://devpost.com/software/alexa-skills-challenge-tech-for-good" target="_blank">
+            Alexa Skills Challenge: Tech for Good Participant</a>  Developed an Alexa skill called 
+            <a href ="https://www.amazon.com/Declan-Sullivan-Distance-Diary/dp/B07H99634Z/ref=sr_1_1?s=digital-skills&ie=UTF8&qid=1538809597&sr=1-1&keywords=distance+diary" target="_blank">
+            Distance Diary</a> that communicates with DynamoDB database through the boto3 API. Controlled by 
+            AWS Lambda, written in Python.
+          </li>  
+        </ul></span>
 
-      <li>SD Hacks 2018 Participant</li>
-      <span class="hide"><ul>
-        <li>
-          Created Beacon, a web app that allows for dropping of pins for all users on the
-          service to see. Utilized Here.com API, I developed the system that allowed for
-          shared pins using JSONbin.io API. Written in JavaScript.
-        </li>
-      </ul></span>
+        <li>SD Hacks 2018 Participant</li>
+        <span class="hide"><ul>
+          <li>
+            Created Beacon, a web app that allows for dropping of pins for all users on the
+            service to see. Utilized Here.com API, I developed the system that allowed for
+            shared pins using JSONbin.io API. Written in JavaScript.
+          </li>
+        </ul></span>
 
-      <li>Chess Tournament Tool</li>
-      <span class="hide"><ul>
-        <li>
-          Developed a <a href="https://github.com/declansullivan/Chess-Tournament-Tool" target="_blank">tool</a> 
-          in Java to keep track of chess tournament rankings and outcomes, as well as 
-          assign players to matches and create a full list of statistics.
-        </li>
-      </ul></span>
+        <li>Chess Tournament Tool</li>
+        <span class="hide"><ul>
+          <li>
+            Developed a <a href="https://github.com/declansullivan/Chess-Tournament-Tool" target="_blank">tool</a> 
+            in Java to keep track of chess tournament rankings and outcomes, as well as 
+            assign players to matches and create a full list of statistics.
+          </li>
+        </ul></span>
 
-    </ul>
+      </ul>
+    </div>
+    <hr>
   </div>
-  <hr>
-</div>
 
-<div class="category">
-  Skills
-  <hr>
-  <div class="list">
-    <ul>
-      <li>Languages: Java, Python</li>
-      <li>AWS: Lambda, DynamoDB</li>
-      <li>Tools: VS Code, IntelliJ, JUnit</li>
-      <li>Other: HTML, CSS, JSON, Microsoft Office</li>
-    </ul>
+  <div class="category">
+    Skills
+    <hr>
+    <div class="list">
+      <ul>
+        <li>Languages: Java, Python</li>
+        <li>AWS: Lambda, DynamoDB</li>
+        <li>Tools: VS Code, IntelliJ, JUnit</li>
+        <li>Other: HTML, CSS, JSON, Microsoft Office</li>
+      </ul>
+    </div>
+    <hr>
   </div>
-  <hr>
-</div>
 
-<div class="category">
-  Coursework
-  <hr>
-  <div class="list">
-    <ul>
-      <li>DSC 10 <span class="hide">– Principles of Data Science</span></li>
-      <li>DSC 20 <span class="hide">– Algorithms, Programming and Data Structures for Data Science (Python)</span></li>
-      <li>DSC 30 <span class="hide">– Data Structures and Algorithms for Data Science (Java)</span></li>
-      <li>CSE 11 <span class="hide">– Introduction to Computer Science and Object-Oriented Programming: Java</span></li>
-      <li>CSE 20 <span class="hide">– Discrete Mathematics</span></li>
-      <li>ECE 15 <span class="hide">– Engineering Computation (C)</span></li>
-      <li>MATH 20C <span class="hide">– Calculus and Analytic Geometry for Science and Engineering</span></li>
-      <li>MATH 18 <span class="hide">– Linear Algebra</span></li>
-    </ul>
+  <div class="category">
+    Coursework
+    <hr>
+    <div class="list">
+      <ul>
+        <li>DSC 10 <span class="hide">– Principles of Data Science</span></li>
+        <li>DSC 20 <span class="hide">– Algorithms, Programming and Data Structures for Data Science (Python)</span></li>
+        <li>DSC 30 <span class="hide">– Data Structures and Algorithms for Data Science (Java)</span></li>
+        <li>CSE 11 <span class="hide">– Introduction to Computer Science and Object-Oriented Programming: Java</span></li>
+        <li>CSE 20 <span class="hide">– Discrete Mathematics</span></li>
+        <li>ECE 15 <span class="hide">– Engineering Computation (C)</span></li>
+        <li>MATH 20C <span class="hide">– Calculus and Analytic Geometry for Science and Engineering</span></li>
+        <li>MATH 18 <span class="hide">– Linear Algebra</span></li>
+      </ul>
+    </div>
+    <hr>
   </div>
-  <hr>
-</div>
-
-
 
 </body>
