--- a/resume/index.html
+++ b/resume/index.html
@@ -124,14 +124,14 @@ tab_title: Resume
     <hr>
     <div class="list">
       <ul>
-        <li>DSC 10 <span class="hide">– Principles of Data Science</span></li>
-        <li>DSC 20 <span class="hide">– Algorithms, Programming and Data Structures for Data Science (Python)</span></li>
-        <li>DSC 30 <span class="hide">– Data Structures and Algorithms for Data Science (Java)</span></li>
-        <li>CSE 11 <span class="hide">– Introduction to Computer Science and Object-Oriented Programming: Java</span></li>
-        <li>CSE 20 <span class="hide">– Discrete Mathematics</span></li>
-        <li>ECE 15 <span class="hide">– Engineering Computation (C)</span></li>
-        <li>MATH 20C <span class="hide">– Calculus and Analytic Geometry for Science and Engineering</span></li>
-        <li>MATH 18 <span class="hide">– Linear Algebra</span></li>
+        <li>Principles of Data Science</li>
+        <li>Algorithms, Programming and Data Structures for Data Science (Python)</li>
+        <li>Data Structures and Algorithms for Data Science (Java)</li>
+        <li>Introduction to Computer Science and Object-Oriented Programming: Java</li>
+        <li>Discrete Mathematics</li>
+        <li>Engineering Computation (C)</li>
+        <li>Calculus and Analytic Geometry for Science and Engineering</li>
+        <li>Linear Algebra</li>
       </ul>
     </div>
     <hr>
