Updated home page and resume

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@ tab_title: Declan Sullivan
     <img class="home" onmouseenter="newImg(this)" onmouseleave="oldImg(this)" src="/css/home.jpg"></img>
 
     <p class="about">
-      Hi, I'm Declan, welcome to my website! I am currently an undergraduate studying Data Science at 
+      Hi, I'm Declan, welcome to my website! I am currently studying Data Science as an undergraduate at 
       the University of California, San Diego. I'm a big fan of science fiction and LEGO, as well as programming 
       and cooking.
       <br><br> 
-      I'm a data science Instructional Assistant at UCSD and a member of <a href="http://ds3.ucsd.edu/" target="_blank">DS3</a>, our 
-      Data Science Student Society. I am also a part of Associated Students as a Judicial Board Member and a member of the 
-      Computer Science and Engineering Society.
+      I'm a data science Instructional Assistant at UCSD and a member of the executive board for
+      <a href="https://medium.com/ds3ucsd" target="_blank">DS3</a>, our Data Science Student Society. 
+      I am also a part of <a href="http://tc.ucsd.edu/" target="_blank">Triton Software Engineering</a> 
+      as a developer, and Associated Students as a Judicial Board Member.
     </p>
   
   </div>
