--- a/resume/index.html
+++ b/resume/index.html
@@ -35,8 +35,8 @@ tab_title: Resume
         <ul>
           <li>University of California, San Diego - 3.64 GPA</li>
           <span class="hide"><ul>
-            <li>Data Science Student Society and Associated Students Judicial Board Member</li>
-            <li>Provost Honors</li>
+            <li>Data Science Student Society Executive Board Member: Marketing</li>
+            <li>Associated Students Judicial Board Member</li>
           </ul></span>
           <li>Newport Harbor High School - 4.32 GPA</li>
           <span class="hide"><ul>
@@ -55,10 +55,15 @@ tab_title: Resume
         <li>Data Science Instructional Assistant (September 2018 – Present)</li>
         <span class="hide"><ul>
           <li>
-            Responsibilities include holding office hours for students to get help, 
-            grading papers, proctoring exams, and planning tests for programming
-            assignments.
-          </li>  
+            Responsibilities include holding office hours for students to get help, planning
+            tests for programming assignments, grading papers, and proctoring exams.
+          </li>
+        </ul></span>
+        <li>Developer at Triton Software Engineering (TSE: October 2018 – Present)</li>
+        <span class="hide"><ul>
+          <li>
+              Developing tools for local nonprofits. Working on a tool to rank local markets.
+          </li>
         </ul></span>
       </ul>
     </div>
@@ -80,6 +85,15 @@ tab_title: Resume
             Distance Diary</a> that communicates with DynamoDB database through the boto3 API. Controlled by 
             AWS Lambda, written in Python.
           </li>  
+        </ul></span>
+
+        <li>Cal Hacks 2018 Sponsor Prize Winner</li>
+        <span class="hide"><ul>
+          <li>
+              Developed Spend Friend, a web app connected to PayPal’s API to log users’ 
+              transactions. Created an accompanying Alexa Skill to talk to a Firebase 
+              database. Won PayPal’s third place prize. Written in Python.
+          </li>
         </ul></span>
 
         <li>SD Hacks 2018 Participant</li>
@@ -106,14 +120,13 @@ tab_title: Resume
   </div>
 
   <div class="category">
-    Skills
+    Technical Skills
     <hr>
     <div class="list">
       <ul>
         <li>Languages: Java, Python</li>
-        <li>AWS: Lambda, DynamoDB</li>
-        <li>Tools: VS Code, IntelliJ, JUnit</li>
-        <li>Other: HTML, CSS, JSON, Microsoft Office</li>
+        <li>Tools: Pandas, AWS Lambda, DynamoDB, Junit, Jupyter</li>
+        <li>Other: HTML, CSS, JSON, Microsoft Office, Kaggle</li>
       </ul>
     </div>
     <hr>
