--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ tab_title: Declan Sullivan
       the University of California, San Diego. I'm a big fan of science fiction and LEGO, as well as programming 
       and cooking.
       <br><br> 
-      I'm a data science Instructional Assistant at UCSD and a member of the executive board for
+      I'm a Data Science Instructional Assistant at UCSD and a member of the executive board for
       <a href="https://medium.com/ds3ucsd" target="_blank">DS3</a>, our Data Science Student Society. 
       I am also a part of <a href="http://tc.ucsd.edu/" target="_blank">Triton Software Engineering</a> 
-      as a developer, and Associated Students as a Judicial Board Member.
+      as a developer and Associated Students as a Judicial Board Member.
     </p>
   
   </div>
