Resume update, languages

--- a/resume/index.html
+++ b/resume/index.html
@@ -124,7 +124,7 @@ tab_title: Resume
     <hr>
     <div class="list">
       <ul>
-        <li>Languages: Java, Python</li>
+        <li>Languages: Java, Python, R</li>
         <li>Tools: Pandas, AWS Lambda, DynamoDB, Junit, Jupyter</li>
         <li>Other: HTML, CSS, JSON, Microsoft Office, Kaggle</li>
       </ul>
